--- a/.github/workflows/qwiet.yml
+++ b/.github/workflows/qwiet.yml
@@ -22,8 +22,8 @@ jobs:
       with:
         java-version: 11.0.x
         distribution: zulu
-    - name: Package with maven
-      run: mvn compile package
+    #- name: Package with maven
+    #  run: mvn compile package
     - name: Download ShiftLeft CLI
       run: |
         curl https://cdn.shiftleft.io/download/sl > ${GITHUB_WORKSPACE}/sl && chmod a+rx ${GITHUB_WORKSPACE}/sl
