--- a/.github/workflows/qwiet.yml
+++ b/.github/workflows/qwiet.yml
@@ -38,6 +38,6 @@ jobs:
       run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
       id: extract_branch
     - name: NextGen Static Analysis
-      run: ${GITHUB_WORKSPACE}/sl analyze --strict --wait --app QwietAI-javaseccode --tag branch=${{ github.head_ref || steps.extract_branch.outputs.branch }} --javasrc .
+      run: ${GITHUB_WORKSPACE}/sl analyze --strict --wait --app QwietAI-javaseccode --tag branch=${{ github.head_ref || steps.extract_branch.outputs.branch }}
       env:
         SHIFTLEFT_ACCESS_TOKEN: ${{ secrets.SHIFTLEFT_ACCESS_TOKEN }}
