--- a/.github/workflows/qwiet.yml
+++ b/.github/workflows/qwiet.yml
@@ -20,10 +20,11 @@ jobs:
     - name: Setup Java JDK
       uses: actions/setup-java@v3
       with:
-        java-version: 8.0.x
+        java-version: 11.0.x
         distribution: zulu
-    #- name: Package with maven
-    #  run: mvn compile package
+        
+    - name: Package with maven
+      run: mvn compile package
     - name: Download ShiftLeft CLI
       run: |
         curl https://cdn.shiftleft.io/download/sl > ${GITHUB_WORKSPACE}/sl && chmod a+rx ${GITHUB_WORKSPACE}/sl
@@ -32,12 +33,12 @@ jobs:
       uses: actions/setup-java@v3
       with:
         distribution: zulu
-        java-version: 8
+        java-version: 11
     - name: Extract branch name
       shell: bash
       run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
       id: extract_branch
     - name: NextGen Static Analysis
-      run: ${GITHUB_WORKSPACE}/sl analyze --strict --wait --app QwietAI-javaseccode --tag branch=${{ github.head_ref || steps.extract_branch.outputs.branch }}
+      run: ${GITHUB_WORKSPACE}/sl analyze --strict --wait --app QwietAI-javaseccode --tag branch=${{ github.head_ref || steps.extract_branch.outputs.branch }} --javasrc
       env:
         SHIFTLEFT_ACCESS_TOKEN: ${{ secrets.SHIFTLEFT_ACCESS_TOKEN }}
